fix: Fix styling for header and scrollbar issues

--- a/frontend/src/components/ErrorPage/ErrorPage.module.css
+++ b/frontend/src/components/ErrorPage/ErrorPage.module.css
@@ -15,22 +15,22 @@
 }
 
 .content {
-  padding-top: rem(220px);
+  padding-top: rem(120px);
   position: relative;
   z-index: 1;
 
-  @media (max-width: $mantine-breakpoint-sm) {
-    padding-top: rem(120px);
+  @media (min-width: $mantine-breakpoint-sm) {
+    padding-top: rem(220px);
   }
 }
 
 .title {
   text-align: center;
   font-weight: 900;
-  font-size: rem(38px);
+  font-size: rem(32px);
 
-  @media (max-width: $mantine-breakpoint-sm) {
-    font-size: rem(32px);
+  @media (min-width: $mantine-breakpoint-sm) {
+    font-size: rem(38px);
   }
 }
 
