--- a/frontend/src/components/HeaderSimple/HeaderSimple.module.css
+++ b/frontend/src/components/HeaderSimple/HeaderSimple.module.css
@@ -1,16 +1,5 @@
-.header {
-  height: rem(56px);
-  margin-bottom: rem(120px);
-  background-color: var(--mantine-color-body);
-  border-bottom: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
-  position: fixed;
-  top: 0;
-  width: 100vw;
-  z-index: 100;
-}
-
-.inner {
-  height: rem(56px);
+.wrapper {
+  height: var(--app-shell-header-height);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -18,6 +7,7 @@
 
 .linksDesktop {
   display: none;
+  height: 100%;
 }
 
 .link {
@@ -61,7 +51,7 @@
   cursor: pointer;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $mantine-breakpoint-xs) {
   .mobileMenu {
     display: none;
   }
