--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,2 @@
-html {
-  scrollbar-gutter: stable;
+root {
 }
